
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct ocfs2_inline_data {int id_data; } ;
struct ocfs2_dir_entry {int dummy; } ;
struct TYPE_2__ {struct ocfs2_inline_data i_data; } ;
struct ocfs2_dinode {TYPE_1__ id2; } ;
struct inode {int dummy; } ;
struct buffer_head {scalar_t__ b_data; } ;
typedef int handle_t ;


 int __ocfs2_delete_entry (int *,struct inode*,struct ocfs2_dir_entry*,struct buffer_head*,int ,int ) ;
 int brelse (struct buffer_head*) ;
 int i_size_read (struct inode*) ;
 int mlog_errno (int) ;
 int ocfs2_read_inode_block (struct inode*,struct buffer_head**) ;

__attribute__((used)) static inline int ocfs2_delete_entry_id(handle_t *handle,
     struct inode *dir,
     struct ocfs2_dir_entry *de_del,
     struct buffer_head *bh)
{
 int ret;
 struct buffer_head *di_bh = ((void*)0);
 struct ocfs2_dinode *di;
 struct ocfs2_inline_data *data;

 ret = ocfs2_read_inode_block(dir, &di_bh);
 if (ret) {
  mlog_errno(ret);
  goto out;
 }

 di = (struct ocfs2_dinode *)di_bh->b_data;
 data = &di->id2.i_data;

 ret = __ocfs2_delete_entry(handle, dir, de_del, bh, data->id_data,
       i_size_read(dir));

 brelse(di_bh);
out:
 return ret;
}
